Fix for overflow styles

--- a/scss/components/_drafterApp.scss
+++ b/scss/components/_drafterApp.scss
@@ -9,7 +9,7 @@
 
 	width: 100%;
 	height: 100%;
-	overflow: auto;
+	overflow: hidden;
 
 	h1 {
 		width: 100%;
@@ -32,6 +32,8 @@
 	}
 
 	&--draftingActive {
+
+		overflow: auto;
 
 		.teamManager {
 			opacity: 0;
